[gd_scene load_steps=18 format=3 uid="uid://3b0ajf54cysr"]

[ext_resource type="Script" path="res://capitulo 1/scripts/sala1.gd" id="1_4gr2a"]
[ext_resource type="Texture2D" uid="uid://085vvpnopo6k" path="res://capitulo 1/assets/sala1.png" id="1_uy5nt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kky85"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ihf3y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ttuer"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w6jj7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eptan"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kk5qh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_efqld"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mob7x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pv0we"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wiulk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u7odc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cegng"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hu0hj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4l27e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cg2lp"]

[node name="Sala1" type="Node2D"]
script = ExtResource("1_4gr2a")

[node name="background" type="TextureRect" parent="."]
offset_left = -5.0
offset_top = -5.0
offset_right = 831.0
offset_bottom = 590.0
texture = ExtResource("1_uy5nt")
expand_mode = 1

[node name="fade" type="ColorRect" parent="."]
offset_right = 835.0
offset_bottom = 578.0
color = Color(0, 0, 0, 1)

[node name="setaL" type="Button" parent="."]
offset_left = 11.0
offset_top = 265.0
offset_right = 53.0
offset_bottom = 314.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_kky85")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ihf3y")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ttuer")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_w6jj7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_eptan")
flat = true

[node name="setaR" type="Button" parent="."]
offset_left = 748.0
offset_top = 263.0
offset_right = 802.0
offset_bottom = 310.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_kk5qh")
theme_override_styles/hover = SubResource("StyleBoxEmpty_efqld")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mob7x")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pv0we")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wiulk")
flat = true

[node name="porta" type="Button" parent="."]
offset_left = 89.0
offset_top = 92.0
offset_right = 274.0
offset_bottom = 479.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_u7odc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_cegng")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hu0hj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4l27e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cg2lp")
flat = true

[node name="sair" type="Label" parent="."]
offset_left = 253.0
offset_top = 498.0
offset_right = 564.0
offset_bottom = 537.0
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="pressed" from="setaL" to="." method="_on_seta_l_pressed"]
[connection signal="pressed" from="setaR" to="." method="_on_seta_r_pressed"]
[connection signal="pressed" from="porta" to="." method="_on_porta_pressed"]
